- UI improvements - Simplified add category - New methods to CoreData manager for sorting and limiting number of records

--- a/Easy Workout/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Easy Workout/en.lproj/MainStoryboard_iPhone.storyboard
@@ -343,7 +343,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Add Workout Group" id="A7G-4v-Uy7">
+                                    <navigationItem title="Add Group" id="A7G-4v-Uy7">
                                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="YqA-6I-zhK">
                                             <connections>
                                                 <action selector="cancelSelected:" destination="s0u-Vh-gty" id="0Y2-UF-P2Q"/>
@@ -507,7 +507,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="MjK-GA-9Om">
-                                <rect key="frame" x="118" y="57" width="161" height="31"/>
+                                <rect key="frame" x="110" y="71" width="161" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="next"/>
@@ -524,17 +524,17 @@
                                 </connections>
                             </pickerView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="eb1-ix-aPr">
-                                <rect key="frame" x="28" y="62" width="51" height="21"/>
+                                <rect key="frame" x="20" y="76" width="51" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="DjT-ua-ZBg">
-                                <rect key="frame" x="177" y="204" width="123" height="37"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" id="DjT-ua-ZBg">
+                                <rect key="frame" x="280" y="126" width="29" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Add Category">
+                                <state key="normal">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -564,7 +564,7 @@
                                 </items>
                             </navigationBar>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="zzK-WX-6bd">
-                                <rect key="frame" x="118" y="96" width="161" height="31"/>
+                                <rect key="frame" x="109" y="124" width="161" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -573,7 +573,7 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Category:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="fQ5-6N-aW8">
-                                <rect key="frame" x="28" y="101" width="74" height="21"/>
+                                <rect key="frame" x="19" y="129" width="74" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -598,59 +598,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ewQ-wy-aIX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1420" y="-200"/>
-        </scene>
-        <!--Add Category View Controller-->
-        <scene sceneID="Lg5-FZ-uCs">
-            <objects>
-                <viewController storyboardIdentifier="AddCategoryViewController" id="cFf-CQ-ItM" customClass="AddCategoryViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="hWR-g2-kVA">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" id="Ldm-pV-O85">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Add Category" id="twu-lb-mUp">
-                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="YpC-63-kjg">
-                                            <connections>
-                                                <action selector="cancelSelected:" destination="cFf-CQ-ItM" id="rlR-Ov-2P6"/>
-                                            </connections>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" title="Done" id="fEE-Y5-eiP">
-                                            <connections>
-                                                <action selector="doneSelected:" destination="cFf-CQ-ItM" id="thH-GQ-78M"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="7y6-R1-Ub6">
-                                <rect key="frame" x="25" y="63" width="51" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="QY1-C2-HcF">
-                                <rect key="frame" x="92" y="58" width="200" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="cFf-CQ-ItM" id="FsM-yE-XMa"/>
-                                </connections>
-                            </textField>
-                        </subviews>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <connections>
-                        <outlet property="txtName" destination="QY1-C2-HcF" id="ban-7H-rhY"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dnw-sG-ebl" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1778" y="-194"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ZtW-2e-s96">
@@ -696,14 +643,6 @@
         <image name="workout.png" width="28" height="10"/>
     </resources>
     <classes>
-        <class className="AddCategoryViewController" superclassName="BaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AddCategoryViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="cancelSelected:"/>
-                <relationship kind="action" name="doneSelected:"/>
-                <relationship kind="outlet" name="txtName" candidateClass="UITextField"/>
-            </relationships>
-        </class>
         <class className="AddWorkoutLogViewController" superclassName="BaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AddWorkoutLogViewController.h"/>
             <relationships>
